<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="2"
              tools:context=".ui.UserSelectionActivity">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/delivery_boy_logo"/>


    </FrameLayout>

    <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/grey"
                android:padding="32dp"
                android:visibility="gone"
                android:progressBackgroundTintMode="src_in"/>

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/nunito_sans_semibold"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/app_welcome_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/app_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/app_long_desc"
                android:textColor="@color/black"
                android:textSize="14sp"/>

        <TextView
                android:id="@+id/app_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_desc"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center"
                android:onClick="riderLogin"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/login_as_a_rider_instead"
                android:textAllCaps="false"
                android:textSize="16sp"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/colorAccent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:onClick="signUp"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/white"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorSecondary"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:onClick="login"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/white"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>